--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.3
   cached_network_image: ^3.2.3
+  http: ^1.1.0
+  get_it: ^7.6.0
 
 dev_dependencies:
   flutter_test:
