--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: cloudwalk_nasa_case
+name: picture_of_the_day
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -39,6 +39,7 @@ dependencies:
   cached_network_image: ^3.2.3
   http: ^1.1.0
   get_it: ^7.6.0
+  dio: ^5.3.0
 
 dev_dependencies:
   flutter_test:
