--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   get_it: ^7.6.0
   dio: ^5.3.0
   mockito: ^5.4.2
+  shared_preferences: ^2.2.0
+  transparent_image: ^2.0.1
 
 dev_dependencies:
   flutter_test:
