Updated files, variable names, tests

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,9 @@ dependencies:
   dio: ^5.3.0
   mockito: ^5.4.2
   shared_preferences: ^2.2.0
-  transparent_image: ^2.0.1
+  intl: ^0.18.1
+  flutter_screenutil: ^5.8.4
+  searchable_listview:  ^2.4.0
 
 dev_dependencies:
   flutter_test:
