--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   intl: ^0.18.1
   flutter_screenutil: ^5.8.4
   searchable_listview:  ^2.4.0
+  equatable: ^2.0.5
+  
 
 dev_dependencies:
   flutter_test:
